fix: fix gallery thumbnail on safari

--- a/src/components/image-gallery/styles.module.css
+++ b/src/components/image-gallery/styles.module.css
@@ -12,6 +12,7 @@
   max-width: 100%;
   aspect-ratio: 1;
   overflow: hidden;
+  min-width: 100px;
 }
 
 .img {
@@ -88,7 +89,7 @@
   }
 
   .prevButton,
-.nextButton {
+  .nextButton {
   font-size: 16px;;
-}
+  }
 }
